Correct mistake of not changing paragraph to 1.5x spacing.

--- a/screen.css
+++ b/screen.css
@@ -69,7 +69,7 @@ h6 {
 p {
   font-family: "Arial Black", Gadget, sans-serif;
   font-size: 1em;/* 16/16 = 1*/
-  line-height: 1em;/* 16/16 = 1*/
+  line-height: 1.5em;/* font-size * 1.5 = 1.5*/
 }
 
 a {
